[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "pad"
version = "0.0.1"
authors = [{name="Po-Hsuan Huang", email="aben20807@gmail.com"}]
description = "Photo add date"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics",
]
dependencies = ["pillow"]

[project.urls]
"Homepage" = "https://github.com/aben20807/pad"
"Bug Tracker" = "https://github.com/aben20807/pad/issues"

[project.scripts]
pad = "pad:cli"
