[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pad*"]

[project]
name = "pad"
version = "1.0.2"
authors = [{name="Po-Hsuan Huang", email="aben20807@gmail.com"}]
description = "Photo add date"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Graphics",
]
dependencies = ["pillow"]

[project.urls]
"Homepage" = "https://github.com/aben20807/pad"
"Bug Tracker" = "https://github.com/aben20807/pad/issues"

[project.scripts]
pad = "pad.pad:cli"
